# mlx-whisper

./: .env.example  .gitignore  README.md  download_and_use_dataset.ipynb  main.py  making_dataset.ipynb  pyproject.toml  setup.sh
src/: bes-example.py  bes_original.ipynb  english_dataset_3split.py  english_dataset_push_to_hf.py  inference.py  template_inference.py  template_train.py  template_train_utils.py  test_welsh_mozilla_dataset.py  test_whisper.ipynb  test_whisper_new.ipynb  test_whisper_welsh.ipynb  train.py  train_utils.py  upload_model.py  utils.py  welsh_3split.py  welsh_audio_inference.py  welsh_dataset.ipynb  welsh_dataset_push_to_hf.py  welsh_eval_for_fun.py  welsh_inference.py  welsh_save_wav.py  welsh_sweep.py  welsh_train.py  welsh_train_utils.py
src/oldpages/: record.py  record3.py  record4.py  recordtest.py
src/pages/: challenge.py  demo.py  record.py  record2.py  translation.py
src/test/: test_english_mozilla_dataset.py
src/test_notebooks/: bes_original.ipynb  test_whisper_new.ipynb  test_whisper_welsh.ipynb  text-to-speech.ipynb
